# SIGAP

./: .env.example  .gitignore  CONTEXT_SUMMARY.md  DATA_GOVERNANCE.md  DESIGN.md  IDEA.md  PRD_SIGAP.md  README.md  SKILL.md  TASK.md  TASK_OVERVIEW.json  api-contract.yaml  filetree.md  pyproject.toml  saran.txt  verify_fixes.py
alembic/versions/: add_security_and_geo.py
backend/: .env.example  TASK.md  __init__.py  api-contract.yaml  init_env.py  sigap-api.postman_collection.json  sigap-local-env.postman_environment.json  test_settings.py
backend/app/: __init__.py  dependencies.py  main.py  settings.py
backend/app/alembic/: env.py
backend/app/api/: TASK.md  __init__.py  admin.py  audit.py  auth.py  complaints.py  distributions.py  public.py  vendors.py
backend/scripts/: contract_tester.py  run.bat  run.sh  seed_dev.py  shell.sh  test.bat  test.sh
backend/tests/: TASK.md
data/: TASK.md
data/migrations/: 0001_enable_pgcrypto_and_rls.sql  TASK.md
data/seeds/: TASK.md
docs/: AGENTS.md  CLAUDE.md  DATA_GOVERNANCE.md  TASK.md
frontend/: TASK.md  package.json  pnpm-lock.yaml
frontend/docs/: AGENTS.md  API_INTEGRATION.md  DESIGN.md
frontend/public/: TASK.md
frontend/src/: TASK.md
frontend/tests/: TASK.md
infra/: TASK.md
infra/docker/: TASK.md
infra/docker-compose.yml/: TASK.md
infra/grafana/: TASK.md
infra/prometheus/: TASK.md
infra/scripts/: TASK.md
project-context/: 001_init_schema.sql  submittion 1.pdf.txt  submittion 2.pdf.txt
scripts/: TASK.md
src/backend/: .env.example  Dockerfile  README.md  alembic.ini  requirements.txt
(+136 files in other folders)
