[tool.poetry]
name = "sigap-backend"
version = "0.2.0"
description = "SIGAP API Backend - Layer 1 Foundation"
authors = ["Kuma <kuma@sigap.gov>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.4.0"
sqlalchemy = ">=2.0.0"
asyncpg = "^0.29.0"
redis = ">=5.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.27.0"
structlog = "^24.1.0"
uvicorn = "^0.30.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
aiosqlite = "^0.20.0"
respx = "^0.21.1"
ruff = "^0.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"